--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "nodemon",
-    "build": "rimraf ./build && tsc",
+    "build": "tsc",
     "start": "npm run build && node build/index.js"
   },
   "author": "",
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@types/node": "^18.8.0",
     "nodemon": "^2.0.20",
-    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
